WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233604
Several WPT tests under html/semantics/forms/constraints are failing due to extraneous willValidate() checks
https://bugs.webkit.org/show_bug.cgi?id=233604
Summary
Several WPT tests under html/semantics/forms/constraints are failing due to e...
Chris Dumez
Reported
2021-11-29 15:52:07 PST
Several WPT tests under html/semantics/forms/constraints are failing due to extraneous willValidate() checks. Per the specification and to match the behavior of Blink & Gecko, ValidityState properties such as validity.typeMismatch should return true in case of mismatch even if the control is disabled (and thus willValidate() returns false).
Attachments
Patch
(37.13 KB, patch)
2021-11-29 15:54 PST
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(42.24 KB, patch)
2021-11-29 18:44 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(66.44 KB, patch)
2021-11-30 07:34 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(66.46 KB, patch)
2021-11-30 10:06 PST
,
Chris Dumez
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-11-29 15:54:56 PST
Created
attachment 445359
[details]
Patch
Chris Dumez
Comment 2
2021-11-29 18:44:01 PST
Created
attachment 445371
[details]
Patch
Chris Dumez
Comment 3
2021-11-30 07:34:27 PST
Created
attachment 445415
[details]
Patch
Chris Dumez
Comment 4
2021-11-30 10:06:39 PST
Created
attachment 445432
[details]
Patch
EWS
Comment 5
2021-11-30 12:39:15 PST
Committed
r286316
(
244675@main
): <
https://commits.webkit.org/244675@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 445432
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-11-30 12:40:22 PST
<
rdar://problem/85881653
>
Darin Adler
Comment 7
2021-11-30 12:51:34 PST
Noticed the misspelling "undeflow" is fairly common here.
Chris Dumez
Comment 8
2021-11-30 12:58:12 PST
(In reply to Darin Adler from
comment #7
)
> Noticed the misspelling "undeflow" is fairly common here.
Fixed in <
https://commits.webkit.org/r286319
>, thanks for noticing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug