Several WPT tests under html/semantics/forms/constraints are failing due to extraneous willValidate() checks https://bugs.webkit.org/show_bug.cgi?id=233604

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline WPT tests now that more checks are passing.

* web-platform-tests/html/semantics/forms/constraints/form-validation-validity-typeMismatch-expected.txt:

Source/WebCore:

Several WPT tests under html/semantics/forms/constraints are failing due to extraneous willValidate() checks.
Per the specification and to match the behavior of Blink & Gecko, ValidityState properties such as
`validity.typeMismatch` should return true in case of mismatch even if the control is disabled (and thus
willValidate() returns false).

No new tests, rebaselined existing tests.

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::tooShort const):
(WebCore::HTMLInputElement::tooLong const):
(WebCore::HTMLInputElement::typeMismatch const):
(WebCore::HTMLInputElement::hasBadInput const):
(WebCore::HTMLInputElement::rangeUnderflow const):
(WebCore::HTMLInputElement::rangeOverflow const):
(WebCore::HTMLInputElement::stepMismatch const):

LayoutTests:

Rebaseline WPT tests now that more checks are passing.

* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-rangeOverflow-expected.txt:
* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-rangeUnderflow-expected.txt:
* platform/mac-wk2/imported/w3c/web-platform-tests/html/semantics/forms/constraints/form-validation-validity-stepMismatch-expected.txt:



Canonical link: https://commits.webkit.org/244675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286316 268f45cc-cd09-0410-ab3c-d52691b4dbfc